k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mini-twitter
  labels:
    app.kubernetes.io/part-of: mini-twitter
